[gd_scene load_steps=4 format=3 uid="uid://jfef8x3bl627"]

[ext_resource type="Script" path="res://Editor/InteractiveMap.gd" id="1_5qhtb"]
[ext_resource type="PackedScene" uid="uid://ytjub2heokq0" path="res://Editor/Scenery/EditableScenery.tscn" id="1_8p0hb"]
[ext_resource type="PackedScene" uid="uid://bjjceeyq3csc3" path="res://Editor/Sky/DynamicSky.tscn" id="2_d55jv"]

[node name="InteractiveMap" type="Node3D"]
script = ExtResource("1_5qhtb")

[node name="EditableScenery" parent="." instance=ExtResource("1_8p0hb")]

[node name="DynamicSky" parent="." instance=ExtResource("2_d55jv")]

[node name="RoadElements" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Nodes" type="Node3D" parent="RoadElements"]

[node name="Pieces" type="Node3D" parent="RoadElements"]

[node name="PipeElements" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Nodes" type="Node3D" parent="PipeElements"]

[node name="Pieces" type="Node3D" parent="PipeElements"]

[node name="Checkpoints" type="Node3D" parent="."]

[node name="Start" type="Node3D" parent="."]

[node name="Deco" type="Node3D" parent="."]
